<resources>
    <string name="app_name">AndersenHomeTaskFragments5</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_first_name">Имя:</string>
    <string name="default_first_name">Тут будет имя</string>
    <string name="label_last_name">Фамилия:</string>
    <string name="default_last_name">Тут будет фамилия</string>
    <string name="label_number">Номер:</string>
    <string name="default_number">Тут будет номер</string>
    <string name="save">Save</string>
    <string name="error_empty_field">Поле не может быть пустым</string>
</resources>